bitbybit/tests/no_compile/invalid_bit_pos/invalid_bit_pos_u7.rs
use bitbybit::bitfield;

#[bitfield(u7, default = 0)]
struct Test {
    #[bit(7, rw)]
    field: bool,
}

fn main() {}
