bitbybit/tests/no_compile/invalid_bit_pos/invalid_bit_pos_u7.stderr
error: bitfield!: Field field requires 8 bits, but only has (7)
 --> tests/no_compile/invalid_bit_pos/invalid_bit_pos_u7.rs:5:5
  |
5 |     #[bit(7, rw)]
  |     ^^^^^^^^^^^^^
